--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "celery>=5.4.0",
+    "celery[redis]>=5.4.0",
     "pandas>=2.2.3",
     "polars>=1.22.0",
     "psycopg2-binary>=2.9.10",
