--- a/compose.yml
+++ b/compose.yml
@@ -1,12 +1,10 @@
-
 services:
-  redis:
-    image: redis:latest
-    container_name: redis
+  valkey:
+    image: valkey:latest
     ports:
-      - "6379:6379"
+      - "8080:8080"
+    environment:
+      - VALKEY_ENV=production
     volumes:
-      - redis-data:/data
-
-volumes:
-  redis-data:
+      - ./data:/var/lib/valkey/data
+    restart: always
